fixed overflow issues

--- a/assets/styles/settings/_main.scss
+++ b/assets/styles/settings/_main.scss
@@ -50,7 +50,7 @@
   }
 
   .settings-content {
-    overflow-x: hidden;
+    // overflow-x: hidden;
     @extend .card;
     background-color: $white;
     box-shadow: $card-shadow-hover;
